apps/site/web/static/css/_schedule.scss
.schedule-route-icon {
  margin: 5px;
}

.form-control.schedule-route-selector {
  // leave room for the route icon
  width: 79%;
  float: left;
}

.schedules-link {
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 0;
  border-top: 1px solid $gray-lighter;
  border-bottom: 1px solid $gray-lighter;
  text-align: left;

  i {
    line-height: 24px;
  }
}

.alerts-modal-button,
.alerts-modal-button:hover,
.alerts-modal-button:active,
.alerts-modal-button:focus {
  margin-top: 10px;
  margin-bottom: 10px;
  text-align: left;
  background-color: $brand-secondary;
  color: inherit;

  p {
    margin: 0;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }

  i {
    line-height: 24px;
  }
}

.schedule-header {
  display: inline-block;
}

.fare-list {
  list-style: none;
  padding: 0;
  border: 1px solid $gray-lightest;

  li:first-child {
    background-color: $brand-primary-darkest;
    color: white;
    border-top: none;
  }

  li {
    padding: 6px;
    border-top: 1px solid $gray-lightest;
  }
}

.subway-map {
  width: 100%;
  max-height: 240px;
  object-fit: cover;
  object-position: 50% 30%;
  @include media-breakpoint-up(sm) {
    transition: max-height 1s ease, object-position 1s ease;
    -webkit-transition: max-height 1s ease, object-position 1s ease;
    cursor: nesw-resize;
    &.expanded {
      max-height: map-get($container-max-widths, md);
      object-position: initial;
    }
  }
  // Leave the map fully expanded on mobile
  @include media-breakpoint-down(sm) {
    height: 100%;
    max-height: 100%;
  }
}

body.no-js .subway-map {
  max-height: map-get($container-max-widths, md);
  object-position: initial;
}

